--- a/src/blocks/select2/_index.scss
+++ b/src/blocks/select2/_index.scss
@@ -106,3 +106,7 @@
 .select2-container--open .select2-dropdown {
   left: 5px;
 }
+
+.select2-container--default.select2-container--open.select2-container--below .select2-selection--single {
+  border-radius: 32px;
+}
