Paths changed to relative for GH pages

--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -28,4 +28,4 @@ footer.footer
         h3.footer__title Contact
         a.footer__link(href="https://goo.gl/maps/WmecA94NbUtbcX1X7" target="_blank") 2464 Royal Ln. Mesa, New Jersey 45463
         a.footer__link(href="+16715550100") (671) 555-0110
-        a.footer__link(href="mailto:info@hounter.com" target="_blank") info@hounter.com
+        a.footer__link(href="mailto:info@example.com" target="_blank") info@hounter.com
