--- a/src/blocks/menu/menu.pug
+++ b/src/blocks/menu/menu.pug
@@ -5,12 +5,8 @@
             a.btn.menu__btn-link(href="#review") About us
             a.btn.menu__btn-link(href="#articles") Articles
             select.menu__select(name="property-select")
-                option.menu__option(value="")
-                    a.menu__option-link(href="#") Property
-                option.menu__option(value="house")
-                    a.menu__option-link(href="#") House
-                option.menu__option(value="villa")
-                    a.menu__option-link(href="#") Villa
-                option.menu__option(value="apartment")
-                    a.menu__option-link(href="#") Apartment
+                option.menu__option(value="") Property
+                option.menu__option(value="house") House
+                option.menu__option(value="villa") Villa
+                option.menu__option(value="apartment") Apartment
         button.menu__signup.btn.btn--signup Sign Up!
