--- a/src/blocks/featured/featured.pug
+++ b/src/blocks/featured/featured.pug
@@ -17,10 +17,10 @@ section.featured#featured
                         use(href="img/sprite.svg#featured__apartment")
                     span.featured__btn-text Apartment
             .featured__arrows
-                button.btn.featured__arrow
+                button.btn.featured__arrow.featured__arrow--left(aria-label="slide to left")
                     svg.featured__arrow-icon
                         use(href="img/sprite.svg#search__arrow--symbol")
-                button.btn.featured__arrow.featured__arrow--active
+                button.btn.featured__arrow.featured__arrow--active.featured__arrow--right(aria-label="slide to right")
                     svg.featured__arrow-icon
                         use(href="img/sprite.svg#search__arrow--symbol")
     .swiper.featured__list
