--- a/src/blocks/tour/tour.pug
+++ b/src/blocks/tour/tour.pug
@@ -16,7 +16,7 @@ section.tour#tour
                 +user("ava-3.jpg", "Dianne Russell", "Manager Director", "big")
             a.btn.btn--action.tour__call-button(href="tel:+123456" title="Call manager") Contact Now
     .tour__right
-        .tour__video-holder.tour__fancy-video
+        .tour__video-holder.tour__fancy-video(tabindex="0" aria-label="play video")
         figure.tour__images.swiper(role="group")
             .tour__swiper-wrapper.swiper-wrapper
                 img.tour__img.swiper-slide(src="img/house-6__inside-1.jpg" alt="Interior photo" data-fancybox="tour" data-caption="House interior")
