--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -4,13 +4,13 @@ footer.footer
             include ../logo/logo
         .footer__left-text We provide information about properties such as houses, villas and apartments to help people find their dream home
         .footer__socials
-            a.footer__social-item(href="https://ru-ru.facebook.com" target="_blank")
+            a.footer__social-item(href="https://ru-ru.facebook.com" target="_blank" aria-label="Facebook")
                 svg.footer__social-icon
                     use(href="img/sprite.svg#footer__fb")
-            a.footer__social-item(href="https://twitter.com/?lang=ru" target="_blank")
+            a.footer__social-item(href="https://twitter.com/?lang=ru" target="_blank" aria-label="Twitter")
                 svg.footer__social-icon
                     use(href="img/sprite.svg#footer__twitter")
-            a.footer__social-item(href="https://www.instagram.com" target="_blank")
+            a.footer__social-item(href="https://www.instagram.com" target="_blank" aria-label="Instagram")
                 svg.footer__social-icon
                     use(href="img/sprite.svg#footer__instagram")
     .footer__column
