Footer linking to filter

--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -15,9 +15,9 @@ footer.footer
                     use(href="img/sprite.svg#footer__instagram")
     .footer__column
         h3.footer__title Property
-        a.footer__link(href="#") House
-        a.footer__link(href="#") Apartment
-        a.footer__link(href="#") Villa
+        a.footer__link.footer__filter(href="#featured" data-id="house") House
+        a.footer__link.footer__filter(href="#featured" data-id="apartment") Apartment
+        a.footer__link.footer__filter(href="#featured" data-id="villa") Villa
     .footer__column
         h3.footer__title Article
         a.footer__link(href="#") New Article
