safari icon fix

--- a/src/blocks/tour/_index.scss
+++ b/src/blocks/tour/_index.scss
@@ -75,7 +75,7 @@
     line-height: 20px;
     white-space: nowrap;
     color: var(--neutral-700);
-    background: center left /32px no-repeat;
+    background: center left /32px 32px no-repeat;
     text-transform: capitalize;
 
     &:nth-child(1) {
