--- a/src/blocks/stats/stats.pug
+++ b/src/blocks/stats/stats.pug
@@ -9,7 +9,7 @@ ul.stats
             .stats__undertitle Successfully Getting Home
     li.stats__item
         .stats__images
-            img.stats__avatar.stats__avatar--squared(src="img/house-1.jpg" alt="House")
+            img.stats__avatar.stats__avatar--squared(src="img/house-1--small.jpg" alt="House")
         .stats__text
             .stats__title 56 Houses
             .stats__undertitle Sold Monthly
