--- a/src/blocks/tour/_index.scss
+++ b/src/blocks/tour/_index.scss
@@ -161,10 +161,11 @@
     background-repeat: no-repeat;
     margin-bottom: 20px;
     cursor: pointer;
-    transition: background-size ease .1s;
+    transition: all ease .2s;
     
     &:hover {
       background-size: 56px 56px, cover, cover;
+      filter: contrast(125%);
     }
 
     @media (min-width: $screen-sm) {
@@ -213,9 +214,9 @@
 
   &__img {
     display: block;
-    width: 70%;
-    max-width: 296px;
-    height: 200px;
+    width: 80px;
+    height: 80px;
+    margin-right: 15px;
     border-radius: 4px;
     overflow: hidden;
     object-fit: cover;
